add TODO notes and .env file
